--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "azure-pipelines-task-lib": "^4.3.1",
+    "readline": "^1.3.0",
     "typed-rest-client": "^1.8.9",
-    "vss-web-extension-sdk": "^5.141.0"
+    "vss-web-extension-sdk": "^5.141.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.32"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.9",
+    "@types/node": "^18.16.9",
     "@types/q": "^1.5.5",
+    "@types/xmldom": "^0.1.31",
+    "chai": "^4.3.7",
     "sync-request": "^6.1.0"
   },
   "directories": {
