--- a/IncreaseVersionTask/package.json
+++ b/IncreaseVersionTask/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "testScript": "mocha ./TestFile --reporter xunit --reporter-option output=ResultsFile.xml"
   },
   "keywords": [],
   "author": "",
