--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
             inputs:
               command: 'custom'
               workingDir: 'IncreaseVersionTask/tests' 
-              customCommand: 'testScript' # See the definition in the explanation section below - it may be called test
+              customCommand: 'run testScript' # See the definition in the explanation section below - it may be called test
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
