--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,15 @@ stages:
           - task: TfxInstaller@4
             inputs:
               version: "v0.x"
+          - task: NodeTool@0
+            inputs: 
+             versionSpec: '10.14.1'
+            displayName: 'Install Node.js'
+          - script: |
+              npm install mocha --save-dev -g
+              npm install sync-request --save-dev
+              npm install @types/mocha --save-dev
+            displayName: 'npm install and test'
           - task: Npm@1
             inputs:
               command: 'install'
