--- a/IncreaseVersionTask/package.json
+++ b/IncreaseVersionTask/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "azure-pipelines-task-lib": "^4.3.1",
+    "azure-pipelines-task-lib": "^4.4.0",
+    "production": "^0.0.2",
     "readline": "^1.3.0",
     "typed-rest-client": "^1.8.9",
     "vss-web-extension-sdk": "^5.141.0",
